# jc-sim-oqp

./: .buildinfo  .gitignore  ARCHITECTURE.txt  BENCHMARKS_README.html  DOCUMENTATION_INTEGRATION.md  README.md  aggregate_purcell_sweep.py  aggregate_results.py  api.html  benchmark_helpers.sh  benchmark_system.html  benchmarks.html  build_docs.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  run.batch  run_benchmark.batch  run_purcell_sweep.batch  search.html  searchindex.js  test_benchmark_runner.py  theory.html  tutorial.html
.doctrees/: BENCHMARKS_README.doctree  api.doctree  benchmark_system.doctree  benchmarks.doctree  environment.pickle  index.doctree  theory.doctree  tutorial.doctree
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/jc_sim_oqp/: core.html  io.html  plotting.html
_modules/jc_sim_oqp/physics/: dissipation.html  hamiltonians.html  operators.html  purcell.html  spectra.html
_modules/jc_sim_oqp/solvers/: dispersive.html  master.html  scanners.html  stochastic.html
_sources/: api.rst  benchmark_system.md  benchmarks.md  index.md  tutorial.md
docs/: BENCHMARKS_README.md  __init__.py  api.rst  benchmark_system.md  conf.py  index.md  refs.bib  theory.aux  theory.md  theory.out  theory.tex  theory.toc  tutorial.md
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  (+3 more)
examples/: README.md  __init__.py  backend_benchmark.py  benchmark_configs.py  benchmark_runner.py  benchmark_scaling.py  blais_fig20.py  demo.py  murch_fig2.py  purcell_sweep.py  scqubits_transmon.py  simulation_suite.py  tavis_cummings.py  transmon_readout.py
src/jc_sim_oqp/: __init__.py  core.py  io.py  plotting.py
tests/: test_backend_agreement.py  test_backends.py  test_core.py  test_hamiltonians.py  test_io.py  test_physics.py  test_physics_validation.py  test_purcell_transmon.py  test_scipy_backend.py  test_scqubits_provider.py  test_solvers.py
(+33 files in other folders)
